--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto";
 }
 
 .wrapper {
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: minmax(min-content, 300px) 4fr;
   grid-template-rows: min-content 1fr;
 }
 
@@ -40,7 +43,7 @@ header {
   background-color: white;
   box-shadow: 0px 2px 10px lightgray;
   position: relative;
-  padding: 1.5rem 3em;
+  padding: 1.5rem 3rem;
 
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -53,7 +56,7 @@ header svg {
 
 .top-info {
   display: grid;
-  grid-template-columns: 2rem 1fr 2rem 3rem 15%;
+  grid-template-columns: 2rem 1fr 2rem 4rem 15%;
   gap: 1.5rem;
   align-items: center;
 }
@@ -160,5 +163,163 @@ button {
  */
 
 main {
+  background-color: rgba(243, 243, 243, 0.9);
+  color: rgb(78, 77, 77);
+  padding: 2rem 3rem;
+
+  display: grid;
+  grid-template-columns: 2fr 0.75fr;
+  gap: 1.75rem;
+}
+
+.main-content {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  gap: 1rem;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(425px, 1fr));
+  grid-auto-rows: min-content;
+  gap: 2rem;
+}
+
+.cards {
   background-color: white;
+  padding: 2.5rem 2rem;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 1px 1px 5px 1px rgba(211, 211, 211, 0.75);
+}
+
+.cards::before {
+  content: "";
+  background-color: rgb(206, 83, 67);
+  width: 8px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px 0 0 10px;
+}
+
+.cards h4 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.cards p {
+  margin-bottom: 2.5rem;
+  font-size: 1.1rem;
+}
+
+main svg {
+  width: 2rem;
+  fill: rgba(0, 0, 0, 0.7);
+}
+
+main h3 {
+  font-size: 1.7rem;
+  font-weight: 500;
+  color: black;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.side-content {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  gap: 4rem;
+}
+
+.content-wrapper {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  gap: 1rem;
+}
+
+.announcements,
+.trendings {
+  background-color: white;
+  padding: 2.5rem 2rem;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(1, minmax(300px, 1fr));
+  grid-auto-rows: min-content;
+}
+
+.announcement {
+  border-bottom: 1px solid rgba(88, 87, 87, 0.3);
+}
+
+.announcement:nth-child(1) {
+  padding-bottom: 1rem;
+}
+
+.announcement:nth-child(2) {
+  padding-block: 1rem;
+}
+
+.announcement:nth-child(3) {
+  padding-top: 1rem;
+  border: none;
+}
+
+.announcement h5 {
+  color: black;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.trendings {
+  gap: 1rem;
+}
+.trending {
+  display: grid;
+  grid-template-columns: 4rem 1fr;
+  gap: 1rem;
+  align-items: center;
+}
+
+.user-img {
+  padding: 5px;
+  aspect-ratio: 1;
+  border-radius: 99px;
+}
+
+.trending:nth-child(1) > .user-img {
+  background-color: #fbf8cc;
+}
+
+.trending:nth-child(2) > .user-img {
+  background-color: #b9fbc0;
+}
+
+.trending:nth-child(3) > .user-img {
+  background-color: #d8e2dc;
+}
+
+.trending:nth-child(4) > .user-img {
+  background-color: #ede0d4;
+}
+
+.handle {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.handle span {
+  color: black;
+  font-size: 1.2rem;
+}
+
+.handle p {
+  font-size: 1.1rem;
 }
